User login required

--- a/templates/login.html
+++ b/templates/login.html
@@ -134,14 +134,30 @@
         {% endfor %} 
 	</div>
 
-	        					<input type="Submit">
+	        					<label style="color:black" > Login <input type="Submit">	</label> 
 									
 						</form>
+
 						</div>
 						</div>
+						<br></br>
+						<div class="col-lg-6">
+							<div class="single-feature">
+								<div class="title">
+									<h4> <a href="/account/register_seller">	Not register yet? </a></h4>
+								</div>
+								<div class="desc-wrap">
+									<p>
+										Register here if you want to sell your video.
+									</p>
+									<a href="/account/register_seller">Join Now</a>									
+								</div>
+							</div>
+						</div>		
+
 						</div>
 	
-				
+		
 
 
 						</div>										
