--- a/templates/upload_book.html
+++ b/templates/upload_book.html
@@ -123,7 +123,7 @@
                 	<h4 class="text-white pb-20 text-center mb-30"></h4>		
                   {% csrf_token %}
                   {{ form|crispy }}<br/>
-                  <button type="submit" class="btn btn-primary">Upload book cambiar forma para thumbnail</button>
+                  <button type="submit" class="btn btn-primary">Upload Video</button>
                 </form>
               {% endblock %}
 
